--- a/.env
+++ b/.env
@@ -1,1 +1,7 @@
-
+API_URL="https://dclone-website.herokuapp.com/api"
+EMAIL_ADDRESS="alekdevs20@gmail.com"
+EMAIL_PASSWORD="ILoveROBLOX"
+MONGO_URI="mongodb://localhost/accord"
+PORT=3000
+ROOT_ENDPOINT="http://localhost:3000"
+WEBSITE_URL="https://dclone-website.herokuapp.com"
